# tac-tik

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  config.h.in
TakTik_virtuel/: .cproject
TakTik_virtuel/HW/taktik/: taktik-cache.lib  taktik.sch
TakTik_virtuel/inc/: carte.h  carte.hpp  initialisation_joueur.h  joueur.hpp  pioche.hpp  pion.hpp  plateau.h  plateau.hpp
TakTik_virtuel/src/: carte.c  carte.cpp  joueur.c  joueur.cpp  main.c  main.cpp  pioche.cpp  pion.cpp  plateau.c  plateau.cpp
hardware/24LC16BHT-I_OT/Altium/: 24LC16BHT-I_OT.epw
hardware/24LC16BHT-I_OT/KiCad/: 24LC16BHT-I_OT.dcm  24LC16BHT-I_OT.lib  24LC16BHT-I_OT.mod  SOT95P270X130-5N.kicad_mod
hardware/IN-PI554FCH/Altium/: IN-PI554FCH.IntLib
hardware/IN-PI554FCH/KiCad/: IN-PI554FCH.dcm  IN-PI554FCH.lib  IN-PI554FCH.mod  INPI554FCH.kicad_mod
hardware/LIB_L7805CV/KiCad/: L7805CV.lib  L7805CV.mod
hardware/TCS40DPR/Altium/: TCS40DPR,LF.epw
hardware/TakTik_altium/: TakTik_alt.PrjPcb  TakTik_alt.PrjPcbStructure  taktik.SchDoc  taktik_pcb.PcbDoc
hardware/esp8266_nodeMCU/: 113990105.lib  SEEED_113990105.kicad_mod
hardware/pin_header/: B06-1x15-AG1-G.IntLib
hardware/taktik/: _saved_taktik-cache.lib  _saved_taktik.bak  _saved_taktik.net  _saved_taktik.sch
inc/: carte.h  carte.hpp  case.hpp  couleur.hpp  jeu.hpp  joueur.h  joueur.hpp  pioche.hpp  pion.hpp  plateau.h  plateau.hpp  tas.h
src/: carte.cpp  carte.h  case.cpp  couleur.cpp  jeu.cpp  joueur.cpp  joueur.cpp.orig  main.c  main.cpp  pioche.cpp  pion.cpp  plateau.cpp  plateau.h  tas.cpp
(+47 files in other folders)
